hphp/hack/test/typecheck/references/strict_foreach_reference1.php.exp
File "strict_foreach_reference1.php", line 4, characters 20-22:
Cannot take references to array elements. (Typing[4225])
